public class Libro {
    private String titulo;
    private String ISBN;
    private String editorial;
    private String idioma;
    private int numPag;
    private int anio;
    private boolean dispReserva;
    public void Libro(String titulo, String ISBN, String editorial, String idioma, int numPag, int anio, boolean dispReserva) {
        // TODO: Implementar el método
    }
    public void setTitulo(String titulo) {
        // TODO: Implementar el método
    }
    public String getTitulo() {
        // TODO: Implementar el método
    }
    public void setISBN(String ISBN) {
        // TODO: Implementar el método
    }
    public String getISBN() {
        // TODO: Implementar el método
    }
    public void setEditorial(String editorial) {
        // TODO: Implementar el método
    }
    public String getEditorial() {
        // TODO: Implementar el método
    }
    public void setIdioma(String idioma) {
        // TODO: Implementar el método
    }
    public String getIdioma() {
        // TODO: Implementar el método
    }
    public void setNumPag(int numPag) {
        // TODO: Implementar el método
    }
    public int getNumPag() {
        // TODO: Implementar el método
    }
    public void setAnio(int anio) {
        // TODO: Implementar el método
    }
    public int getAnio() {
        // TODO: Implementar el método
    }
    public void setDispReserva(boolean dispReserva) {
        // TODO: Implementar el método
    }
    public boolean getDispReserva() {
        // TODO: Implementar el método
    }
    public boolean estaDisponible() {
        // TODO: Implementar el método
    }
    public void esExtranjero() {
        // TODO: Implementar el método
    }
    public void informacion() {
        // TODO: Implementar el método
    }
}
