' Generated by UML Generator
' Encoded: hLV9Rjim4BtxAtYa4HdesIY2ECl1HM8OTMv5KL0IuqmhaG991q62_7j9Yf8ubEGMHIzsF9nztkCmLzemPKvrjT2_G3HCiPeK5TDwOuo2_6Jujf3Y06-SV5eyGyb90Qge-6BXjSWrv1L8mmj6tXU4h8IiSyNNv62jnT59Ib2yA42AMFWi5Tiqt4PMR4r0c4vu0rmv-o2g85TIhyazQFFvtlsuT6BDRF0WFTY_lN1bFow6V2XE9IEZH9REW9MbzqjzAEVJVYtNv4L2wSuLh-KBFwjIIsqKKrwiQNHWVRlig4lN1hMV8yVpvy6haoAdt4viazis6KPTntoledCGJrBLp1LAn-wY_aI7-KaNeO2zL8zWJfMand_rpGfrfwdTWcwai5wvdWZtA0shzbnfAQ8gFZhqU8yjS70q9zaUhdVnRrw2aGfO5GkX15cpM29EzPuTUmGn0RB_KTfaltBDrOiroQMiE1CzTDePupmo4cUHaL4E6S4PP2IAdv4-keFVEBP7eEPchkDTDu-zoZ8grLcwz6YS8xRonwdDNLS47PM3hGV5KLXVDCMr9w5RbTHovzj3eovXit2-x6RcR3QsYxHl9TRtPqZxTcWqdMmwie-rbp4eFD46T8yExrujmCLFhYJz0_jwk3ym41xj5-_Mju7YWzHMH9awwgvDtxwFp09_zbBEtR6yP6K4yeaBbpMygg141BlTRP4JcmlYbk4LVv82sJHAFd6TEhSpq3_ugxtGWOi241yzjuOIHjTodxidmqDxRsodBp4_tL0T7T_dI77duoJX4gorAWYY7lQiJ00OkaVJDYPOxDHIqDjEqtBeTe90UpYYg9i5HHD9gEaLKhF7C36QZYwvIpgrr7xVJPUEvemz38gfYqsA1JgBZZ6HiI5oxTZuvPH3nTh-HbmyopctfEPeKx36MiNSQU2DAOMNWu56uWVDz19fmfeBxv81yfTXBTchOj_hX82U7VuHaF829vUHDBMCn8cTto__o0LhUTDbGN4-s7ZGGhJPjodJDFK4Iq4B3zLlnSRjn6Ps8pOJJFjFbt-xgQA9qOa1ZZPNh3zqukmYCHRiVBe5CoyvBjmD6UBGPXtjXwG6Li7Vw8MtsjGpBNhUozKgl00JeKFlmjFC_Hg2BAwuAEr_5hy1
' URL: http://www.plantuml.com/plantuml/uml/hLV9Rjim4BtxAtYa4HdesIY2ECl1HM8OTMv5KL0IuqmhaG991q62_7j9Yf8ubEGMHIzsF9nztkCmLzemPKvrjT2_G3HCiPeK5TDwOuo2_6Jujf3Y06-SV5eyGyb90Qge-6BXjSWrv1L8mmj6tXU4h8IiSyNNv62jnT59Ib2yA42AMFWi5Tiqt4PMR4r0c4vu0rmv-o2g85TIhyazQFFvtlsuT6BDRF0WFTY_lN1bFow6V2XE9IEZH9REW9MbzqjzAEVJVYtNv4L2wSuLh-KBFwjIIsqKKrwiQNHWVRlig4lN1hMV8yVpvy6haoAdt4viazis6KPTntoledCGJrBLp1LAn-wY_aI7-KaNeO2zL8zWJfMand_rpGfrfwdTWcwai5wvdWZtA0shzbnfAQ8gFZhqU8yjS70q9zaUhdVnRrw2aGfO5GkX15cpM29EzPuTUmGn0RB_KTfaltBDrOiroQMiE1CzTDePupmo4cUHaL4E6S4PP2IAdv4-keFVEBP7eEPchkDTDu-zoZ8grLcwz6YS8xRonwdDNLS47PM3hGV5KLXVDCMr9w5RbTHovzj3eovXit2-x6RcR3QsYxHl9TRtPqZxTcWqdMmwie-rbp4eFD46T8yExrujmCLFhYJz0_jwk3ym41xj5-_Mju7YWzHMH9awwgvDtxwFp09_zbBEtR6yP6K4yeaBbpMygg141BlTRP4JcmlYbk4LVv82sJHAFd6TEhSpq3_ugxtGWOi241yzjuOIHjTodxidmqDxRsodBp4_tL0T7T_dI77duoJX4gorAWYY7lQiJ00OkaVJDYPOxDHIqDjEqtBeTe90UpYYg9i5HHD9gEaLKhF7C36QZYwvIpgrr7xVJPUEvemz38gfYqsA1JgBZZ6HiI5oxTZuvPH3nTh-HbmyopctfEPeKx36MiNSQU2DAOMNWu56uWVDz19fmfeBxv81yfTXBTchOj_hX82U7VuHaF829vUHDBMCn8cTto__o0LhUTDbGN4-s7ZGGhJPjodJDFK4Iq4B3zLlnSRjn6Ps8pOJJFjFbt-xgQA9qOa1ZZPNh3zqukmYCHRiVBe5CoyvBjmD6UBGPXtjXwG6Li7Vw8MtsjGpBNhUozKgl00JeKFlmjFC_Hg2BAwuAEr_5hy1
' Generated on: 2025-11-26T13:50:50.494388200

@startuml
skinparam classAttributeIconSize 0
hide circle

class Biblioteca {
  -nombre: String
  -direccion: String
  -horaApertura: int
  -horaCierre: int
  -libros: List<Libro>
  -salas: List<Sala>
  --
  +Biblioteca(nombre: String, direccion: String)
  +addLibro(libro: Libro): void
  +removeLibro(libro: Libro): void
  +mostrarLibros(): void
  +addSala(sala: Sala): void
  +removeSala(sala: Sala): void
  +mostrarSalas(): void
  +estaAbierta(hora: int): void
  +informacion(): void
  +mostrarBiblioteca(): void
  +buscarLibroPorTitulo(titulo: String): Libro
  +mostrarSalasDisponibles(): void
  +mostrarTotalPersonas(): void
}

class Libro {
  -titulo: String
  -ISBN: String
  -editorial: String
  -idioma: String
  -numPag: int
  -anio: int
  -dispReserva: boolean
  --
  +Libro(titulo: String, ISBN: String, editorial: String, idioma: String, numPag: int, anio: int, dispReserva: boolean)
  +setTitulo(titulo: String): void
  +getTitulo(): String
  +setISBN(ISBN: String): void
  +getISBN(): String
  +setEditorial(editorial: String): void
  +getEditorial(): String
  +setIdioma(idioma: String): void
  +getIdioma(): String
  +setNumPag(numPag: int): void
  +getNumPag(): int
  +setAnio(anio: int): void
  +getAnio(): int
  +setDispReserva(dispReserva: boolean): void
  +getDispReserva(): boolean
  +estaDisponible(): boolean
  +esExtranjero(): void
  +informacion(): void
}

class Main {
  +{static} main(args: String[]): void
}

class PersonaPoo {
  -nombre: String
  -edad: int
  -direccion: String
  -apellido: String
  -DNI: String
  -email: String
  -telefono: String
  -profesion: String
  -anios_experiencia: String
  --
  +PersonaPoo(nombre: String, edad: int)
  +MostrarInformacion(): void
  +setDireccion(direccion: String): void
  +setNombre(nombre: String): void
  +getNombre(): String
  +getEdad(): int
  +setApellido(apellido: String): void
  +getApellido(): String
  +setDNI(dNI: String): void
  +getDNI(): String
  +setEmail(email: String): void
  +getEmail(): String
  +setTelefono(telefono: String): void
  +getTelefono(): String
  +setProfesion(profesion: String): void
  +getProfesion(): String
  +setAnios_experiencia(anios_experiencia: String): void
  +getAnios_experiencia(): String
  +estaJubilado(): boolean
  +informacion(): void
}

class Sala {
  -nombre: String
  -capacidad: int
  -pizarra: boolean
  -tipo: String
  -dispReserva: boolean
  -personas: List<PersonaPoo>
  -numeroPersonas: int
  --
  +Sala(nombre: String, capacidad: int, pizarra: boolean, tipo: String, dispReserva: boolean)
  +setNombre(nombre: String): void
  +getNombre(): String
  +setCapacidad(capacidad: int): void
  +getCapacidad(): int
  +setPizarra(pizarra: boolean): void
  +getPizarra(): boolean
  +setTipo(tipo: String): void
  +getTipo(): String
  +setDispReserva(dispReserva: boolean): void
  +getDispReserva(): boolean
  +setNumeroPersonas(numeroPersonas: int): void
  +getNumeroPersonas(): int
  +estaDisponible(): boolean
  +tienePizarra(): boolean
  +informacion(): void
  +entrarPersona(p: PersonaPoo): boolean
  +salirPersona(p: PersonaPoo): boolean
  +mostrarPersonas(): void
}

Biblioteca o-- Libro
Biblioteca o-- Sala
Sala o-- PersonaPoo
@enduml